[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Player/Helmet/Helmet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/SketchLevel/SketchLevel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/GameScene/GameScene.gd" type="Script" id=3]
[ext_resource path="res://Assets/Originals/SFX/LowRumble/LowRumbleLoop.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Originals/SFX/Inhaleexhale/Exhale 1 - GDWJM.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Originals/SFX/Inhaleexhale/Inhale 3 - GDWJM.ogg" type="AudioStream" id=6]
[ext_resource path="res://Scenes/MoonMiniature/MoonMiniature.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/InteractionController.gd" type="Script" id=8]
[ext_resource path="res://Assets/Originals/Music/Moon_Tunes_-_GWJM.mp3" type="AudioStream" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Breath"
length = 5.8
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath("AudioPlayers/Breathing/Inhale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AudioPlayers/Breathing/Exhale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="AudioStreamRandomPitch" id=2]
audio_stream = ExtResource( 6 )
random_pitch = 1.05

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 5 )
random_pitch = 1.05

[node name="GameScene" type="Node"]
script = ExtResource( 3 )

[node name="MeteorsViewport" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true

[node name="Viewport" type="Viewport" parent="MeteorsViewport"]
size = Vector2( 1024, 600 )
own_world = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="MoonMiniature" parent="MeteorsViewport/Viewport" instance=ExtResource( 7 )]

[node name="WorldContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
script = ExtResource( 8 )

[node name="Viewport" type="Viewport" parent="WorldContainer"]
size = Vector2( 1024, 600 )
own_world = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
audio_listener_enable_3d = true
shadow_atlas_size = 1024

[node name="MoonWorld" parent="WorldContainer/Viewport" instance=ExtResource( 2 )]

[node name="HelmetViewport" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true

[node name="Viewport" type="Viewport" parent="HelmetViewport"]
size = Vector2( 1024, 600 )
own_world = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Helmet" parent="HelmetViewport/Viewport" instance=ExtResource( 1 )]

[node name="AudioPlayers" type="Node" parent="."]

[node name="LowRumble" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource( 4 )
autoplay = true
bus = "SFX"

[node name="Breathing" type="AnimationPlayer" parent="AudioPlayers"]
root_node = NodePath("../..")
autoplay = "Breath"
anims/Breath = SubResource( 1 )

[node name="Inhale" type="AudioStreamPlayer" parent="AudioPlayers/Breathing"]
stream = SubResource( 2 )
volume_db = -10.0
bus = "SFX"

[node name="Exhale" type="AudioStreamPlayer" parent="AudioPlayers/Breathing"]
stream = SubResource( 3 )
volume_db = -10.0
bus = "SFX"

[node name="Music" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource( 9 )
volume_db = -10.0
autoplay = true
bus = "Music"

[node name="AsphyxiationTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="human_died" from="WorldContainer/Viewport/MoonWorld" to="." method="_on_MoonWorld_human_died"]
[connection signal="human_faced" from="WorldContainer/Viewport/MoonWorld" to="." method="_on_MoonWorld_human_faced"]
[connection signal="player_camera_x_rotated" from="WorldContainer/Viewport/MoonWorld" to="." method="_on_MoonWorld_player_camera_x_rotated"]
[connection signal="player_camera_y_reset" from="WorldContainer/Viewport/MoonWorld" to="." method="_on_MoonWorld_player_camera_y_reset"]
[connection signal="player_camera_y_rotated" from="WorldContainer/Viewport/MoonWorld" to="." method="_on_MoonWorld_player_camera_y_rotated"]
[connection signal="player_left_foot_grounded" from="WorldContainer/Viewport/MoonWorld" to="." method="_on_MoonWorld_player_left_foot_grounded"]
[connection signal="player_oxygen_picked_up" from="WorldContainer/Viewport/MoonWorld" to="." method="_on_MoonWorld_player_oxygen_picked_up"]
[connection signal="player_right_foot_grounded" from="WorldContainer/Viewport/MoonWorld" to="." method="_on_MoonWorld_player_right_foot_grounded"]
[connection signal="succeeded" from="WorldContainer/Viewport/MoonWorld" to="." method="_on_MoonWorld_succeeded"]
[connection signal="start_asphyxiation" from="HelmetViewport/Viewport/Helmet" to="." method="_on_Helmet_start_asphyxiation"]
[connection signal="stop_asphyxiation" from="HelmetViewport/Viewport/Helmet" to="." method="_on_Helmet_stop_asphyxiation"]
[connection signal="timeout" from="AsphyxiationTimer" to="." method="_on_AsphyxiationTimer_timeout"]
